# Thakur_College_Hackathon

./: README.md
backend/: attendance.db  camera_service.py  fingerprint_verifier.keras  main.py  pyproject.toml  remove_db.py  send_data.py  train_siamese.py  verify.py
backend/backup/: attendance.db
frontend/astitva/: README.md  index.html  package.json
frontend/astitva/src/: App.jsx  theme.js
frontend/astitva/src/api/: astitvaAPI.js
frontend/astitva/src/components/: AdminDashboard.jsx  FacialRecognitionScanner.jsx  FacialRegistration.jsx  SplashScreen.jsx  StudentRegistrationPage.jsx
